--- a/paint.css
+++ b/paint.css
@@ -1,12 +1,25 @@
-canvas{
-     border: 1px solid gray;
-    background:#FFFFE0;
-   box-shadow: inset 2px 2px 1px rgba(0,0,0,0.2);
+#canvasDiv {
+  position: fixed;
+  /* Fix the div position */
+  top: 7vh;
+  /* Position it at the top */
+  left: 50%;
+  /* Move it to the center horizontally */
+  transform: translateX(-50%);
+  /* Adjust for the exact center */
+  z-index: 1000;
+  /* Ensure it stays above other elements if any */
 }
 
-
-#canvasDiv{
- float: left;
+canvas {
+  border: 1px solid gray;
+  background: #FFFFE0;
+  box-shadow: inset 2px 2px 1px rgba(0, 0, 0, 0.2);
+  width: 300px;
+  /* Set the width as desired */
+  height: 300px;
+  /* Set the height as desired */
+  /* You can keep the rest of the styles if needed */
 }
 
 #controls{
@@ -21,7 +34,7 @@ float: left;
 }
 
 .listingButton{
-width: 100px;
+width: 120px;
 height: 30px;
 border: 1px solid gray;
 box-shadow: inset 2px 2px 1px rgba(0,0,0,0.2);
