--- a/general.css
+++ b/general.css
@@ -58,7 +58,11 @@ font:  19px Tahoma;
 }
 
 
-dropdown {
+/* Show the dropdown content when the dropdown is clicked on */
+.show {
+    display: block;
+}
+/* dropdown {
     position: relative;
    display: inline-block;
 }
@@ -98,14 +102,50 @@ dropdown {
 
 
 
-.dropdown-content p:hover {background-color:#CCE5FF;}
+.dropdown-content p:hover {background-color:#CCE5FF;} */
 
 
 
 .show {display:block;}
 
-
+/* Style for the translucent overlay */
 .overlay {
+    display: none;
+    position: fixed;
+    z-index: 1001;
+    /* Above other elements, including the canvas */
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.7);
+    /* Translucent black background */
+    overflow: auto;
+}
+
+/* Style for the content inside the overlay */
+.overlay-content {
+    position: relative;
+    margin: auto;
+    padding: 20px;
+    max-width: 90%;
+    /* Set maximum width for the content */
+    max-height: 90%;
+    /* Set maximum height for the content */
+}
+
+/* Style for the close button */
+.closebtn {
+    position: absolute;
+    top: 15px;
+    right: 35px;
+    font-size: 40px;
+    color: white;
+    cursor: pointer;
+}
+
+
+/* .overlay {
     height: 0%;
     width: 100%;
     position: fixed;
@@ -145,14 +185,14 @@ dropdown {
 
 .overlay p:hover, .overlay p:focus {
     color: #f1f1f1;
-}
+} */
 
-.closebtn {
+/* .closebtn {
     position: absolute;
     top: 20px;
     right: 45px;
     font-size: 60px;
-}
+} */
 
 @media screen and (max-height: 450px) {
   .overlay {overflow-y: auto;}
