--- a/paint.css
+++ b/paint.css
@@ -8,40 +8,30 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  /* Horizontally center the content */
 
   height: 100vh;
-    /* Set to full viewport height */
     overflow-y: auto;
-    /* Enable vertical scrolling */
 }
 
 #buttonContainer {
   margin-top: 10px;
-  /* Adjust as needed */
   display: flex;
   gap: 10px;
   position: sticky;
-  /* Change from fixed to sticky */
   top: 0;
-  /* Stick to the top */
   z-index: 1001;
-  /* Ensure it's above canvas */
 }
 
-/* Dropdown container */
 .dropdown {
   position: relative;
   display: inline-block;
 }
 
-/* Dropdown button styling */
 .dropdown button {
   border: none;
   cursor: pointer;
 }
 
-/* Dropdown content (hidden by default) */
 .dropdown-content {
   display: none;
   position: absolute;
@@ -54,14 +44,9 @@
 #canvasDiv {
   position: relative;
     top: 0;
-    /* left: 10vw; */
-    /* transform: translateX(-50%); */
-    /* This ensures it's centered */
     z-index: 1000;
-    /* Adjust as needed */
     align-items: center;
     overflow-y: auto;
-    /* Enable vertical scrolling if content exceeds the height */
 }
 
 canvas {
@@ -71,42 +56,32 @@ canvas {
   align-items: center;
   /* width: 300px;
   height: 300px; */
-  /* Set the height as desired */
-  /* You can keep the rest of the styles if needed */
 }
 
 .select-mcq {
   /* text-align: center; */
-  /* Center the content */
   margin-top: 30px;
   color: white;
-  /* Add some space above the question */
 }
 
 label {
   font-weight: bold;
-  /* Make the label text bold */
   display: block;
   margin-top: 2px;
-  /* Display the label as a block element */
 }
 
 .mcq-options input[type="checkbox"] {
   margin-right: 10px;
   float: left;
   margin-top: 5px;
-  /* Add some space between the checkbox and its label */
 }
 
 #controls{
 float: left;
   margin-left: 10px;
-  // border: 2px solid khaki;
     background-color: rgba(0,0,0,0.1);
     width: 15%;
- //   box-shadow:  2px 2px 5px khaki;
     /* text-align: center; */
-  //  border-radius: 5px;
 }
 
 .listingButton{
@@ -127,20 +102,16 @@ margin-bottom: 3px;
 opacity: 1;
 width:161px;
 height:31px;
-
+cursor: pointer;
 }
 
 .closeButtonOptions{
 float: right;
-// margin-left:50px;
 height: 20px;
 width: 20px;
 font-size: 18px;
 border: 1px solid black;
 background: wheat;
-// border-radius: 2px;
-// box-shadow: 2px 2px 12px rgba(0,0,0,0.2);
-// color: white;
 opacity: 0.5;
 line-height: 20px;
 }
